force-app/main/default/objects/Character_Model__c/fields/Back__c.field-meta.xml
<CustomField>
    <fullName>Back__c</fullName>
    <label>Back</label>
    <required>true</required>
    <type>Url</type>
</CustomField>