force-app/main/default/objects/Character_Model__c/fields/Feet__c.field-meta.xml
<CustomField>
    <fullName>Feet__c</fullName>
    <label>Feet</label>
    <type>Url</type>
</CustomField>