force-app/main/default/objects/Character_Model__c/fields/Finger_2__c.field-meta.xml
<CustomField>
    <fullName>Finger_2__c</fullName>
    <label>Secondary Ring</label>
    <type>Url</type>
</CustomField>