force-app/main/default/objects/Character_Model__c/fields/Finger__c.field-meta.xml
<CustomField>
    <fullName>Finger__c</fullName>
    <label>Primary Ring</label>
    <required>true</required>
    <type>Url</type>
</CustomField>