force-app/main/default/objects/Character_Model__c/fields/Guild_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Guild_Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guild Applicant</label>
    <referenceTo>Guild_Applicant__c</referenceTo>
    <relationshipLabel>Character Models</relationshipLabel>
    <relationshipName>Character_Models</relationshipName>
    <type>Lookup</type>
</CustomField>