force-app/main/default/objects/Character_Model__c/fields/Guild_Member__c.field-meta.xml
<CustomField>
    <fullName>Guild_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guild Member</label>
    <referenceTo>Guild_Member__c</referenceTo>
    <relationshipLabel>Character Models</relationshipLabel>
    <relationshipName>Character_Models</relationshipName>
    <type>Lookup</type>
</CustomField>