force-app/main/default/objects/Character_Model__c/fields/Hands__c.field-meta.xml
<CustomField>
    <fullName>Hands__c</fullName>
    <label>Hands</label>
    <required>true</required>
    <type>Url</type>
</CustomField>