force-app/main/default/objects/Character_Model__c/fields/Head__c.field-meta.xml
<CustomField>
    <fullName>Head__c</fullName>
    <label>Head</label>
    <type>Url</type>
</CustomField>