force-app/main/default/objects/Character_Model__c/fields/Legs__c.field-meta.xml
<CustomField>
    <fullName>Legs__c</fullName>
    <label>Legs</label>
    <type>Url</type>
</CustomField>