force-app/main/default/objects/Character_Model__c/fields/Main_Raw__c.field-meta.xml
<CustomField>
    <fullName>Main_Raw__c</fullName>
    <label>Main Raw</label>
    <type>Url</type>
</CustomField>