force-app/main/default/objects/Character_Model__c/fields/Off_Hand__c.field-meta.xml
<CustomField>
    <fullName>Off_Hand__c</fullName>
    <label>Off Hand</label>
    <required>true</required>
    <type>Url</type>
</CustomField>