force-app/main/default/objects/Character_Model__c/fields/Realm__c.field-meta.xml
<CustomField>
    <fullName>Realm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Realm</label>
    <referenceTo>Realm__c</referenceTo>
    <relationshipLabel>Character Models</relationshipLabel>
    <relationshipName>Character_Models</relationshipName>
    <type>Lookup</type>
</CustomField>