force-app/main/default/objects/Character_Model__c/fields/Tabard__c.field-meta.xml
<CustomField>
    <fullName>Tabard__c</fullName>
    <label>Tabard</label>
    <type>Url</type>
</CustomField>