force-app/main/default/objects/Character_Model__c/fields/Trinket_1__c.field-meta.xml
<CustomField>
    <fullName>Trinket_1__c</fullName>
    <label>Primary Trinket</label>
    <required>true</required>
    <type>Url</type>
</CustomField>