force-app/main/default/objects/Character_Model__c/fields/Trinket_2__c.field-meta.xml
<CustomField>
    <fullName>Trinket_2__c</fullName>
    <label>Secondary Trinket</label>
    <type>Url</type>
</CustomField>