force-app/main/default/objects/Character_Model__c/fields/Waist__c.field-meta.xml
<CustomField>
    <fullName>Waist__c</fullName>
    <label>Waist</label>
    <required>true</required>
    <type>Url</type>
</CustomField>